[package]
name = "reverse_proxy_sys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1.0-rc.3"
hyper-util = { git = "https://github.com/hyperium/hyper-util.git" }
bytes = "1.5.0"
headers = "0.3.9"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
wildmatch = "2.1.1"
regex = "1.10.2"
reqwest = { version = "0.11", features = ["json"] }
lazy_static = "1.4.0"
governor = "0.6.0"
dashmap = "5.5.3"
md5 = "0.7.0"
