[package]
name = "reverse_proxy_sys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "1.0.0", features = ["full"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
wildmatch = "2.1.1"
regex = "1.10.2"
lazy_static = "1.4.0"
governor = "0.6.0"
dashmap = "5.5.3"
url = "2.4.1"
clap = { version = "4.5.4", features = ["derive"] }
dlopen = "0.1"
dlopen_derive = "0.1.4"
